	to DGESVD was not of dimension at least one (it was a vector).

    o   Rownames in xcoef and ycoef of cancor() were wrong if x or y
	was rank-deficient.

    o   lqs() could give warnings if there was an exact fit. (PR#1184)

    o   aov() didn't find free-floating variables for Error() terms when
	called from inside another function


	**************************************************
	*						 *
	*	       1.3 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.3.1


NEW FEATURES

    o	massage-examples is now a Perl script and about 50x faster.

    o	On Unix(-alike) systems the default pager is now determined
	during configuration, and is `less' if available, otherwise
	`more' (and not `more -s' as previously).

    o	configure now tests for strptime functions that fail on inputs
	before 1970 (found on Irix).  It no longer checks for the SCSL
	and SGIMATH libraries on Irix.

    o	New formula interface to cor.test() in package ctest.

    o	"NA" is now a valid color name (as NA has been a valid integer
	color).

    o	pairs() function has a new `gap' argument for adjusting the
	spacing between panels.

    o	R CMD check has a new test for unbalanced braces in Rd files.

    o	readBin() has a new argument `signed' to simplify reading
	unsigned 8- and 16-bit integers.

    o	New capabilities() option "cledit".

    o	Modified restore code to give clearer error messages in some cases.



BUG FIXES

    o	Fixed placement of mtext() output (including tick labels)
	when text is perpendicular to axis AND axis is logged
	(PR#997 and PR#865).

    o	rect() and arrows() now respond to setting of par(xpd)

    o	abline() now responds to the setting of par(xpd), including
	via the "..." argument (PR#750).

    o	Using cat() to a gzfile() connection no longer compresses poorly
	(at the expense of some latency).

    o	The `exact' p-values for the two-sided two-sample